fixed the node link viz not showing

--- a/main.css
+++ b/main.css
@@ -58,7 +58,5 @@ body {
 }
 
 .idiom {
-  display: flex;
   flex: 0.8;
-  height: 50vh;
 }
